--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
     <div id="app" class="wrapper"></div>
     <script type="module" src="/src/main.js"></script>
+    <script type="module" src="/src/assets/js/index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
   </body>
 </html>
