--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div id="app" class="wrapper"></div>
     <script type="module" src="/src/main.js"></script>
     <script type="module" src="/src/assets/js/index.js"></script>
+    <script type="module" src="/src/assets/js/slider.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
   </body>
 </html>
